css wraper fix

--- a/css/game.css
+++ b/css/game.css
@@ -20,7 +20,7 @@ body, html
 
 .wrapper
 {	margin: 0 auto;
-	width: 440px; 
+	width: 424px; 
 	height: 100%;
 }
 
